<resources>
    <string name="app_name">BlueGit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_text">Don\'t have an account? Register now!</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="password">Password</string>
    <string name="register_header">REGISTER</string>
    <string name="name">Name</string>
    <string name="app_logo_description">Circle with BlueGit inside and a cart on above it</string>
    <string name="phone">Phone</string>
    <string name="register">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_placeholder">PLACEHOLDER</string>
    <string name="item_image_placeholder">Item image</string>
    <string name="product_manage_header">Product Manage</string>
    <string name="add_product_button">List An Item</string>
    <string name="empty_user_product">Wow, so empty… \nAdd an item now and make some profit!</string>
    <string name="sold_orders">Sold Orders</string>
    <string name="empty_cart">You don\'t have any item yet…\nGo do some shopping :D</string>
    <string name="order">Order</string>
    <string name="no_order">No Order At The Moment</string>
    <string name="add_voucher">Add Voucher</string>
</resources>